--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "piny.project_settings": {
     "open-pages": ["pinyfakepage.html"]
-  }
+  },
+  "cSpell.words": ["Menlo", "Nunito", "Segoe", "wdth", "wght"]
 }
