--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-router/serve": "^7.5.3",
     "class-variance-authority": "^0.7.1",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3"
